--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
 										</li>									
 									</ul>
 									<a class="navbar-brand  d-none d-lg-block" href="index.html">
-										<img class="l2" src="assets/images/logo2.png" alt="3d-moto-simulator-2">
+										<img class="l2" src="assets/images/logo2.png" alt="burnin-rubber-5-xs">
 									</a>
 									<ul class="navbar-nav ml-auto">
 										<li class="nav-item">
@@ -389,16 +389,6 @@
 	<section class="game-play-section game-play-section2">
 		<div class="container">
 			<div class="row">
-				<div class="col-xl-3 col-lg-4 col-md-6">
-					<div class="single-play">
-						<div class="image">
-							<img src="assets/images/slope3/slope-3-logo.png" alt="slope-3">
-						</div>
-						<div class="contant">
-							<a href="slope-3.html">Slope 3</a>
-						</div>
-					</div>
-				</div>
 				<div class="col-xl-3 col-lg-4 col-md-6">
 					<div class="single-play">
 						<div class="image">
@@ -512,26 +502,6 @@
 				<div class="col-xl-3 col-lg-4 col-md-6">
 					<div class="single-play">
 						<div class="image">
-							<img src="assets/images/colortunnel/color-tunnel.png" alt="color-tunnel">
-						</div>
-						<div class="contant">
-							<a href="color-tunnel.html">Color Tunnel</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-3 col-lg-4 col-md-6">
-					<div class="single-play">
-						<div class="image">
-							<img src="assets/images/colortunnel2/color-tunnel-2-logo.jpg" alt="color-tunnel-2">
-						</div>
-						<div class="contant">
-							<a href="color-tunnel-2.html">Color Tunnel 2</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-3 col-lg-4 col-md-6">
-					<div class="single-play">
-						<div class="image">
 							<img src="assets/images/colorroad/color-road.png" alt="color-road">
 						</div>
 						<div class="contant">
@@ -546,6 +516,36 @@
 						</div>
 						<div class="contant">
 							<a href="rolly-vortex.html">Rolly Vortex</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-3 col-lg-4 col-md-6">
+					<div class="single-play">
+						<div class="image">
+							<img src="assets/images/slope3/slope-3-logo.png" alt="slope-3">
+						</div>
+						<div class="contant">
+							<a href="slope-3.html">Slope 3</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-3 col-lg-4 col-md-6">
+					<div class="single-play">
+						<div class="image">
+							<img src="assets/images/colortunnel/color-tunnel.png" alt="color-tunnel">
+						</div>
+						<div class="contant">
+							<a href="color-tunnel.html">Color Tunnel</a>
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-3 col-lg-4 col-md-6">
+					<div class="single-play">
+						<div class="image">
+							<img src="assets/images/colortunnel2/color-tunnel-2-logo.jpg" alt="color-tunnel-2">
+						</div>
+						<div class="contant">
+							<a href="color-tunnel-2.html">Color Tunnel 2</a>
 						</div>
 					</div>
 				</div>
