--- a/g-swich-3.html
+++ b/g-swich-3.html
@@ -8,18 +8,18 @@
 	<meta name="forntEnd-Developer" content="Mamunur Rashid">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>G-Swich 3 - G-Swich 3 Game, Play Free Online Games (Best Racing Games)</title>
-	<meta name="description" content="Virtual Driving in 3D You can test out and 
-	display your driving prowess in the very exciting and frantic 3D Moto Simulator 2.
-	Pick one of the following: a rally car, a police car, or a
-	Choose a vintage car—and then race across the streets at top speed!">
-        <meta name="keywords" content="racing games, 
-		car racing games
-        best pc racing games, 
-        car games for pc, 
-        driving games for pc,
-        best car games for pc, 
-        pc racing games, 
-        racing pc games">
+	<meta name="description" content="The third entry in the G-Switch series from Serius Games 
+	is a skill game that defies gravity. 
+	You can play the game solo in the Campaign and Endless modes, 
+	or you can play it multiplayer with up to 7 others. 
+	Change between walls, floors, and ceilings as you attempt to escape a maze of lethal traps!">
+        <meta name="keywords" content="g-switch 3
+		play g-switch 3,
+		g-switch 3 game,
+		g-switch 3 unblocked,
+		g-switch 3 two player games,
+		g-switch 3 plus,
+		g-switch online">
 	<!-- favicon -->
 	<link rel="shortcut icon" href="assets/images/favicon.html" type="image/x-icon">
 	<!-- bootstrap -->
@@ -562,27 +562,27 @@
 						<ul>
 							<li>
 								<a href="https://facebook.com/unblockedgames" target="_blank">
-									<i class="fab fa-facebook-f">facebook</i>
+									<i class="fab fa-facebook-f"></i>
 								</a>
 							</li>
 							<li>
 								<a href="https://twitter.com/gamesnoads" target="_blank">
-									<i class="fab fa-twitter">twitter</i>
+									<i class="fab fa-twitter"></i>
 								</a>
 							</li>
 							<li>
 								<a href="https://pinterest.com/html5unblockedgames" target="_blank">
-									<i class="fab fa-pinterest-p">pinterest</i>
+									<i class="fab fa-pinterest-p"></i>
 								</a>
 							</li>
 							<li>
 								<a href="https://youtube.com/@bestracinggames" target="_blank">
-									<i class="fab fa-youtube">youtube</i>
+									<i class="fab fa-youtube"></i>
 								</a>
 							</li>
 							<li>
 								<a href="https://instagram.com/racingpcgames" target="_blank">
-									<i class="fab fa-instagram">instagram</i>
+									<i class="fab fa-instagram"></i>
 								</a>
 							</li>
 						</ul>
