--- a/running-fred.html
+++ b/running-fred.html
@@ -569,27 +569,27 @@
 						<ul>
 							<li>
 								<a href="https://facebook.com/unblockedgames" target="_blank">
-									<i class="fab fa-facebook-f">facebook</i>
+									<i class="fab fa-facebook-f"></i>
 								</a>
 							</li>
 							<li>
 								<a href="https://twitter.com/gamesnoads" target="_blank">
-									<i class="fab fa-twitter">twitter</i>
+									<i class="fab fa-twitter"></i>
 								</a>
 							</li>
 							<li>
 								<a href="https://pinterest.com/html5unblockedgames" target="_blank">
-									<i class="fab fa-pinterest-p">pinterest</i>
+									<i class="fab fa-pinterest-p"></i>
 								</a>
 							</li>
 							<li>
 								<a href="https://youtube.com/@bestracinggames" target="_blank">
-									<i class="fab fa-youtube">youtube</i>
+									<i class="fab fa-youtube"></i>
 								</a>
 							</li>
 							<li>
 								<a href="https://instagram.com/racingpcgames" target="_blank">
-									<i class="fab fa-instagram">instagram</i>
+									<i class="fab fa-instagram"></i>
 								</a>
 							</li>
 						</ul>
