--- a/skiing-fred.html
+++ b/skiing-fred.html
@@ -8,18 +8,18 @@
 	<meta name="forntEnd-Developer" content="Mamunur Rashid">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Skiing Fred - Skiing Fred Game, Play Free Online Games (Best Racing Games)</title>
-	<meta name="description" content="Virtual Driving in 3D You can test out and 
-	display your driving prowess in the very exciting and frantic 3D Moto Simulator 2.
-	Pick one of the following: a rally car, a police car, or a
-	Choose a vintage car—and then race across the streets at top speed!">
-        <meta name="keywords" content="racing games, 
-		car racing games
-        best pc racing games, 
-        car games for pc, 
-        driving games for pc,
-        best car games for pc, 
-        pc racing games, 
-        racing pc games">
+	<meta name="description" content="A revolutionary free-movement feature in Skiing Fred's over-the-top action-sports game, 
+	lets you take charge of the action and execute real skill-based spectacular maneuvers. Be brave! 
+	Be imaginative! Gain an advantage over your pals or enlist their aid in completing difficult challenges 
+	by demolishing every opposition in your path.">
+        <meta name="keywords" content="skiing fred wiki,
+		skiing fred poki,
+		running fred,
+		running fred game,
+		play running fred,
+		play running fred game,
+		skiing fred unblocked,
+		falling fred">
 	<!-- favicon -->
 	<link rel="shortcut icon" href="assets/images/favicon.html" type="image/x-icon">
 	<!-- bootstrap -->
@@ -561,27 +561,27 @@
 						<ul>
 							<li>
 								<a href="https://facebook.com/unblockedgames" target="_blank">
-									<i class="fab fa-facebook-f">facebook</i>
+									<i class="fab fa-facebook-f"></i>
 								</a>
 							</li>
 							<li>
 								<a href="https://twitter.com/gamesnoads" target="_blank">
-									<i class="fab fa-twitter">twitter</i>
+									<i class="fab fa-twitter"></i>
 								</a>
 							</li>
 							<li>
 								<a href="https://pinterest.com/html5unblockedgames" target="_blank">
-									<i class="fab fa-pinterest-p">pinterest</i>
+									<i class="fab fa-pinterest-p"></i>
 								</a>
 							</li>
 							<li>
 								<a href="https://youtube.com/@bestracinggames" target="_blank">
-									<i class="fab fa-youtube">youtube</i>
+									<i class="fab fa-youtube"></i>
 								</a>
 							</li>
 							<li>
 								<a href="https://instagram.com/racingpcgames" target="_blank">
-									<i class="fab fa-instagram">instagram</i>
+									<i class="fab fa-instagram"></i>
 								</a>
 							</li>
 						</ul>
