--- a/index.html
+++ b/index.html
@@ -283,6 +283,15 @@
 		}
 		
 	</style>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-D5Z57H33VS"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-D5Z57H33VS');
+	</script>
 </head>
 
 <body>
